--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 .idea/**/gradle.xml
 .idea/**/libraries
 
+.idea
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
@@ -167,4 +169,4 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
-# End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij
+# End of https://www.toptal.com/developers/gitignore/api/gradle,java,intellij!/.idea/
